--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,11 @@
 .box {
     border-style: solid;
     border-color: black;
+    opacity: 1;
+}
+
+#btn {
+    font-size: 30px;
+    padding: 10px;
+    margin: 8px;
 }
